--- a/irctc.html
+++ b/irctc.html
@@ -799,72 +799,77 @@
       <div class="d">d</div>
     </div>
     <div class="line">
-      <p style="color: rgb(158, 59, 76); font: calibri;">*If for any reason, the reservation output details are not duplayed on your commen after you have made payment
-        please check the details Booking History in left navigation bar. You may simbeck your mail for the details of your
+      <p style="color: rgb(158, 59, 76); font: calibri;">*If for any reason, the reservation output details are not
+        duplayed on your commen after you have made payment
+        please check the details Booking History in left navigation bar. You may simbeck your mail for the details of
+        your
         booking Tou are also advaed to contact Indian Ralways beloning your ticket again</p>
-      <p style="color: rgb(158, 59, 76); font: calibri;">**The ID card will be required in the journeyPAN Card/Driving License issued by a 50 Photo Identity card issued by Central/State Govt ludent Photo Identity
+      <p style="color: rgb(158, 59, 76); font: calibri;">**The ID card will be required in the journeyPAN Card/Driving
+        License issued by a 50 Photo Identity card issued by Central/State Govt ludent Photo Identity
         Cardised by record school ar Called e their students/ Nationalized Bank Facebook with pharaCrudies Cards issued
-        by banks with laminated photograph 1dentification Card Aetharg jeuney in original. The identification details are
+        by banks with laminated photograph 1dentification Card Aetharg jeuney in original. The identification details
+        are
         required at the time of Tatkal booking</p>
-        <button style="background-color: #e7edff;left: 29rem;position: relative;">Next</button>
-        <button style="background-color: #e7edff;left: 30rem;position: relative;">Replan</button>
+      <button style="background-color: #e7edff;left: 29rem;position: relative;">Next</button>
+      <button style="background-color: #e7edff;left: 30rem;position: relative;">Replan</button>
 
-        <hr color=#75a0bd>
-        <ul class="lists">
-          <li>The ticket details, availability of tickets at the particular time and the fare, including the service charge, appear on the screen, along with the payment option Follow the instructions</li>
-          <li>"Payment Option" Select the Payment Mode and Bank From the Drop Down List.</li>
-          <li>Click on the "Make Payment" It redirect to selected Bank Site.</li>
-        </ul>
+      <hr color=#75a0bd>
+      <ul class="lists">
+        <li>The ticket details, availability of tickets at the particular time and the fare, including the service
+          charge, appear on the screen, along with the payment option Follow the instructions</li>
+        <li>"Payment Option" Select the Payment Mode and Bank From the Drop Down List.</li>
+        <li>Click on the "Make Payment" It redirect to selected Bank Site.</li>
+      </ul>
     </div>
 
     <div class="hello">
-    <div class="con" style="top: -52px; position: relative;">
-      <h4 style="color: rgb(0 3 116);font-family: calibri;">Journey Details</h4>
-    </div>
-    <div class="table4" style="left: 15%; position: relative;top: -52px;">
-      <table class="t2" style="border: none;">
-        <tr style="border: none;">
-          <td style="border: none;font-family: calibri;">Train No./Name:</td>
-          <td style="border: none;font-family: calibri;">12952/MUMBAI RAJDHANI</td>
-          <td style="border: none;font-family: calibri;">Journey date:</td>
-          <td style="border: none;font-family: calibri;">30-Jan-2014</td>
-          <td style="border: none;font-family: calibri;"><b>Class:</b>THIRD AC</td>
-        </tr>
-        <tr>
-          <td style="border: none;font-family: calibri;">From Station:</td>
-          <td style="border: none;font-family: calibri;">NEW DELHI/NDLS</td>
-          <td style="border: none;font-family: calibri;">To Station:</td>
-          <td style="border: none;font-family: calibri;">MUMBAI CENTRAL-BCT</td>
-          <td style="border: none;font-family: calibri;">Quota: GENERAL</td>
-        </tr>
-        <tr style="height: 4px; overflow: hidden;">
-          <td style="border: none;top: -24px;
+      <div class="con" style="top: -52px; position: relative;">
+        <h4 style="color: rgb(0 3 116);font-family: calibri;">Journey Details</h4>
+      </div>
+      <div class="table4" style="left: 15%; position: relative;top: -52px;">
+        <table class="t2" style="border: none;">
+          <tr style="border: none;">
+            <td style="border: none;font-family: calibri;">Train No./Name:</td>
+            <td style="border: none;font-family: calibri;">12952/MUMBAI RAJDHANI</td>
+            <td style="border: none;font-family: calibri;">Journey date:</td>
+            <td style="border: none;font-family: calibri;">30-Jan-2014</td>
+            <td style="border: none;font-family: calibri;"><b>Class:</b>THIRD AC</td>
+          </tr>
+          <tr>
+            <td style="border: none;font-family: calibri;">From Station:</td>
+            <td style="border: none;font-family: calibri;">NEW DELHI/NDLS</td>
+            <td style="border: none;font-family: calibri;">To Station:</td>
+            <td style="border: none;font-family: calibri;">MUMBAI CENTRAL-BCT</td>
+            <td style="border: none;font-family: calibri;">Quota: GENERAL</td>
+          </tr>
+          <tr style="height: 4px; overflow: hidden;">
+            <td style="border: none;top: -24px;
           position: relative;font-family: calibri;">Boarding Station:</td>
-          <td style="border: none; top: -18px;
+            <td style="border: none; top: -18px;
           position: relative;font-family: calibri;"><select name="Stations" id="station" style="top: 21px;
     position: relative;">
-              <option value="NEW DELHI/NDLS">NEW DELHI/NDLS</option>
-              <option value="kolkata">kolkata</option>
-              <option value="Ranchi">Ranchi</option>
-            </select>
-            <p style="left: 137px; top: -14px; position: relative; color: #2e8bc9; font-family: calibri;">Schedule</p>
-          </td>
-          <td style="border: none;top:-24px;
+                <option value="NEW DELHI/NDLS">NEW DELHI/NDLS</option>
+                <option value="kolkata">kolkata</option>
+                <option value="Ranchi">Ranchi</option>
+              </select>
+              <p style="left: 137px; top: -14px; position: relative; color: #2e8bc9; font-family: calibri;">Schedule</p>
+            </td>
+            <td style="border: none;top:-24px;
           position: relative;font-family: calibri;">Reserve Upto Station:</td>
-          <td style="border: none; top: -24px;
+            <td style="border: none; top: -24px;
           position: relative;font-family: calibri;">MUMBAI CENTRAL-BCT</td>
-          <td style="border: none;top:-24px;
+            <td style="border: none;top:-24px;
           position: relative;font-size: 13px;left: 41px;color: #2e8bc9;font-family: 'calibri';">Save Journey list</td>
-        </tr>
-      </table>
-      <button class="b3">Show Availibility and Fare</button>
+          </tr>
+        </table>
+        <button class="b3">Show Availibility and Fare</button>
+      </div>
     </div>
-  </div>
- 
-  <div class="con" style="top: -434px; position: relative;">
-    <h4 style="color: rgb(0 3 116);">Passenger Details</h4>
+
+    <div class="con" style="top: -434px; position: relative;">
+      <h4 style="color: rgb(0 3 116);">Passenger Details</h4>
     </div>
-  <div class="table4" style="left: 15%;top: -27.5rem;
+    <div class="table4" style="left: 15%;top: -27.5rem;
     position: relative;">
       <table class="t2" style="border: none;">
         <tr style="background-color: #bbd6ff;color: #00008d;font-family: calibri;">
@@ -885,26 +890,65 @@
           <td>Veg</td>
           <td>No</td>
         </tr>
-        </table>
+      </table>
+    </div>
+
+    <div class="this">
+      <div class="conT">
+        <div class="con4" style="top: 0rem;
+    position: relative;
+    left: 8%;
+    width: 42%">
+          <h4 style="color: rgb(0 3 116);">Availibility Details</h4>
+          <p style="color: rgb(141, 139, 139);">Availibility:</p>
+          <p style="color: rgb(141, 139, 139);">Availibility At:</p>
         </div>
+      </div>
 
-        <!-------------------------------------------- IMAGE----------------------------------------------------------->
-      
-          <img src="images/booketicket7.jpg" alt="img" class="image3">
 
-          <div class="lists3">
-            <h3>CANCELLATION OF e-TICKET - A GUIDE </h3>
-            <ul>
-              <li>If user wishes to cancel his e-ticket GO TO 'My Transactions' 
-              and Click 'Booked Ticket History' link on the menu bar, select the 
-              ticket to be cancelled and click on 'Go For 
-              Cancellation' and can initiate the cancellation by 
-              selecting the passengers to be cancelled. 
-            </li></ul></div>
+      <div class="con5">
+        <div class="con6" style="top: -2.8rem;
+          position: relative;
+          left: 52%;
+          width: 44%">
+          <h4 style="color: rgb(0 3 116);">Fare Details</h4>
+          <p style="color: rgb(141, 139, 139);">Ticket Fair:</p>
+          <p style="color: rgb(141, 139, 139);">Charges:</p>
+          <p style="color: rgb(141, 139, 139);">Total Fair:</p>
+          <p style="color: black;font-family: calibri;"><b>*Ticket fare includesa service tax of Rs 56</b></p>
+        </div>
+      </div>
+    </div>
+    <div class="para">
+      <p style="color: rgb(158, 59, 76);
+      font: calibri;
+      width: 64rem;
+      top: -26rem;
+      position: relative;
+      left: 16%;">#This availability is for all berths, not for your preferred
+        berth type. As tickets are booked throughout the country across PRS counters, any confirmed status shown above
+        may decline into RAC/ Waiting List status, while your payment being processed</p>
+    </div>
 
-        
+    <div class="hello" style="top: -23rem; position: relative;">
+      <div class="con" style="top: -52px; position: relative;">
+        <h4 style="color: rgb(0 3 116);font-family: calibri;">Payment Options</h4>
+      </div>
+      <!-------------------------------------------- IMAGE----------------------------------------------------------->
 
-  
+      <img src="images/booketicket7.jpg" alt="img" class="image3">
+
+      <div class="lists3">
+        <h3>CANCELLATION OF e-TICKET - A GUIDE </h3>
+        <ul>
+          <li>If user wishes to cancel his e-ticket GO TO 'My Transactions'
+            and Click 'Booked Ticket History' link on the menu bar, select the
+            ticket to be cancelled and click on 'Go For
+            Cancellation' and can initiate the cancellation by
+            selecting the passengers to be cancelled.
+          </li>
+        </ul>
+      </div>
 
   </header>
 </body>
