--- a/irctc.html
+++ b/irctc.html
@@ -934,9 +934,55 @@
       <div class="con" style="top: -52px; position: relative;">
         <h4 style="color: rgb(0 3 116);font-family: calibri;">Payment Options</h4>
       </div>
+      <div class="pay">
+        <label for="Payment Mode:" class="payment"><b>Payment Mode:</b></label>
+        <input type="radio" name="" class="internet_bank" style="left: 114px; position: relative;color: #0a2b8f;">
+        <label for="" class="credit">Intenet Banking</label>
+        <input type="radio" name="" class="internet_bank" style="left: 114px; position: relative; color: #0a2b8f;">
+        <label for="" class="credit">Credit Card(Payment Gateways)</label>
+        <input type="radio" name="" class="debit">
+        <label for="" style="left: 8%; position: relative;color: #0a2b8f;">Debit Card(Payment Gateways)</label>
+        <input type="radio" name="" style="left: 8%;
+        position: relative;">
+        <label for="" style="left: 8%;position: relative;color: #0a2b8f;">Cash card</label>
+        <input type="radio" name="" class="Radio"><br>
+
+        <label for="" class="banks">Select Bank:</label>
+        <select name="" id="bank">
+          <option value="Select bank" selected>Select bank</option>
+          <option value="SBI">SBI</option>
+          <option value="HDFC">HDFC</option>
+          <option value="UCO">UCO</option>
+        </select>
+      </div>
+
+      <button style="background-color: #e7edff;left: 37rem;position: relative;top: 2rem;">Back</button>
+      <button style="background-color: #e7edff;left: 38rem;position: relative;top: 2rem;">Make Payment</button>
+      <button style="background-color: #e7edff;left: 39rem;;position: relative;top: 2rem;">Replan</button>
+
+      <div class="list3">
+        <ul>
+          <li>After successful payment and booking of accommodations, the User is shown the ticket confirmation details
+            along with a “Print Reservation Slip” Button. On clicking the button ERS is shown with an option to print.
+          </li>
+          <br>
+          <li>The customer can subsequently also print Electronic Reservation Slip from the 'BOOKED TICKETS' link on the
+            left navigation bar.</li>
+        </ul>
+      </div>
+<!-- 
+      <p style="color: blue;
+      top: 10rem;
+      position: relative;
+      left: 4rem;">Congratulations! You have succefully booked a ticket.Please print the ERS and carry it along with photo ID card.</p> -->
+      <img src="images/booketicket6.jpeg" alt="" style="top: 5%;position: relative; top: 12rem;
+      position: relative;
+      left: 4%;">
+
       <!-------------------------------------------- IMAGE----------------------------------------------------------->
 
-      <img src="images/booketicket7.jpg" alt="img" class="image3">
+
+      <!-- <img src="images/booketicket7.jpg" alt="img" class="image3">
 
       <div class="lists3">
         <h3>CANCELLATION OF e-TICKET - A GUIDE </h3>
@@ -948,7 +994,7 @@
             selecting the passengers to be cancelled.
           </li>
         </ul>
-      </div>
+      </div> -->
 
   </header>
 </body>
