--- a/irctc.html
+++ b/irctc.html
@@ -3,13 +3,34 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=
-    , initial-scale=1.0">
+  <meta name="viewport" content="width=devide-width, initial-scale=1.0">
 
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
+  
 </head>
+<style>
+[class*="col-"] {
+  width: 100%;
+}
 
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
+  .col-1 {width: 8.33%;}
+  .col-2 {width: 16.66%;}
+  .col-3 {width: 25%;}
+  .col-4 {width: 33.33%;}
+  .col-5 {width: 41.66%;}
+  .col-6 {width: 50%;}
+  .col-7 {width: 58.33%;}
+  .col-8 {width: 66.66%;}
+  .col-9 {width: 75%;}
+  .col-10 {width: 83.33%;}
+  .col-11 {width: 91.66%;}
+  .col-12 {width: 100%;}
+}
+
+</style>
 <body>
   <header>
     <div class="container">
@@ -852,7 +873,8 @@
                 <option value="kolkata">kolkata</option>
                 <option value="Ranchi">Ranchi</option>
               </select>
-              <p style="left: 137px; top: -14px; position: relative; color: #2e8bc9; font-family: calibri;">Schedule</p>
+              <p style="left: 39%;
+              top: -11px; position: relative; color: #2e8bc9; font-family: calibri;">Schedule</p>
             </td>
             <td style="border: none;top:-24px;
           position: relative;font-family: calibri;">Reserve Upto Station:</td>
@@ -970,7 +992,7 @@
             left navigation bar.</li>
         </ul>
       </div>
-<!-- 
+      <!-- 
       <p style="color: blue;
       top: 10rem;
       position: relative;
@@ -981,8 +1003,10 @@
 
       <!-------------------------------------------- IMAGE----------------------------------------------------------->
 
-
-      <!-- <img src="images/booketicket7.jpg" alt="img" class="image3">
+      <img src="images/canceleticket1.jpg" alt="" style="left: 6%;
+      position: relative;
+      top: 92rem;">
+      <img src="images/booketicket7.jpg" alt="img" class="image3">
 
       <div class="lists3">
         <h3>CANCELLATION OF e-TICKET - A GUIDE </h3>
@@ -994,9 +1018,36 @@
             selecting the passengers to be cancelled.
           </li>
         </ul>
-      </div> -->
-
+      </div>
+      <br>
   </header>
-</body>
+   <img src="images/canceleticket2.jpeg" alt="" style="left: 23%;
+   position: relative;
+   top: 13rem;">
+   <div class="content_12" style="top: 14rem;
+   position: relative;">
+    <ul>
+      <li>User has to select only those passangers who are 
+      to be cancelled in case of partial cancellation of 
+      ticket. in case of partial cancellation the passanger 
+      should get a fresh printout of the ERS for the 
+      passangers continuing their journey. 
+</li></ul></div>
+<img src="images/canceleticket4.jpg" alt="" style="left: 2rem;
+position: relative;
+top: 16rem;">
+ <div class="content_12" style="top: 17rem;;
+ position: relative;">
+  <ul>
+    <li>User has to select only those passangers who are 
+    to be cancelled in case of partial cancellation of 
+    ticket. in case of partial cancellation the passanger 
+    should get a fresh printout of the ERS for the 
+    passangers continuing their journey. 
+</li></ul></div>
+<img src="images/canceleticket6.jpg" alt="" style="top: 18rem;
+position: relative;
+left: 2%;">
 
+</body>
 </html>
